adding div class in the body with h3 and p tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="main-box">
+        <h1> Coding Quiz Challenge </h1>
+        <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
+            Note there is a set time to answer each question! <br>
+           Try to answer the question within the given time to ensure success in the end! </p>
+    </div>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
