--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="main-box">
         <h1> Coding Quiz Challenge </h1>
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
-            Note there is a set time to answer each question! <br>
-           Try to answer the question within the given time to ensure success in the end! </p>
+            <small><em>Note there is a set time to answer each question! <br>
+           Try to answer the question within the given time to ensure success in the end!</em> </small></p>
+           <button class="start-butt">Start Quiz</button>
     </div>
     <script src="./assets/js/script.js"></script>
 </body>
