--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
             <small><em>Note there is a set time to answer each question! <br>
            Try to answer the question within the given time to ensure success in the end!</em> </small></p>
-           <button class="start-butt">Start Quiz</button>
+           <button class="start-butn">Start Quiz</button>
     </div>
     <script src="./assets/js/script.js"></script>
 </body>
