--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="high-score">View Highscore</div>
+    <div class="time">Time: </div>
     <div class="main-box">
         <h1> Coding Quiz Challenge </h1>
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
