--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>Coding Quiz</title>
 </head>
 <body>
     <div class="high-score">View Highscore</div>
-    <div class="time">Time: </div>
+    <div class="time">Time: 0 </div>
     <div class="main-box">
         <h1> Coding Quiz Challenge </h1>
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
             <small><em>Note there is a set time to answer each question! <br>
            Try to answer the question within the given time to ensure success in the end!</em> </small></p>
            <button class="start-butn">Start Quiz</button>
+    </div>
+    <!-- div for the qustions! -->
+    <div id="questions">
+        <h2 id="question-title"></h2>
+    <div id="choices" class="choices"></div>
     </div>
     <script src="./assets/js/script.js"></script>
 </body>
