--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="high-score">View Highscore</div>
-    <div class="time">Time: 0 </div>
+    <div id="time">10</div>
     <div class="main-box">
         <h1> Coding Quiz Challenge </h1>
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
