working on var for the time and the questions

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <div class="high-score">View Highscore</div>
     <div id="time">10</div>
     <div class="main-box">
+        <div id="start-page" class="start">
         <h1> Coding Quiz Challenge </h1>
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
             <small><em>Note there is a set time to answer each question! <br>
            Try to answer the question within the given time to ensure success in the end!</em> </small></p>
-           <button class="start-butn">Start Quiz</button>
-    </div>
+           <button id="start-butn">Start Quiz</button>
+        </div>
+        </div>
+
     <!-- div for the qustions! -->
     <div id="questions">
         <h2 id="question-title"></h2>
