--- a/index.html
+++ b/index.html
@@ -9,23 +9,40 @@
     <title>Coding Quiz</title>
 </head>
 <body>
-    <div class="high-score">View Highscore</div>
-    <div id="time">10</div>
-    <div class="main-box">
-        <div id="start-page" class="start">
+    <div class="scores">View Highscores</div>
+
+    <div class="timer">Time: <span id="time">0</span></div>
+
+    <div class="wrapper">
+      <div id="start-screen" class="start">
         <h1> Coding Quiz Challenge </h1>
         <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
             <small><em>Note there is a set time to answer each question! <br>
            Try to answer the question within the given time to ensure success in the end!</em> </small></p>
-           <button id="start-butn">Start Quiz</button>
+           <button id="start">Start Quiz</button>
         </div>
         </div>
 
     <!-- div for the qustions! -->
-    <div id="questions">
-        <h2 id="question-title"></h2>
-    <div id="choices" class="choices"></div>
-    </div>
+    <button id="start">Start Quiz</button>
+</div>
+
+<div id="questions" class="hide">
+  <h2 id="question-title"></h2>
+  <div id="choices" class="choices"></div>
+</div>
+
+<div id="end-screen" class="hide">
+  <h2>All done!</h2>
+  <p>Your final score is <span id="final-score"></span>.</p>
+  <p>
+    Enter initials: <input type="text" id="initials" max="3" />
+    <button id="submit">Submit</button>
+  </p>
+</div>
+
+<div id="feedback" class="feedback hide"></div>
+</div>
     <script src="./assets/js/script.js"></script>
-</body>
+   </body>
 </html>
