--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
-</head>
-<body>
-    <div class="scores">View Highscores</div>
+
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+  </head>
+
+  <body>
+    <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
     <div class="timer">Time: <span id="time">0</span></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
-        <h1> Coding Quiz Challenge </h1>
-        <p>Test your knowledge and challenge your memory by answering these JavaScript questions!<br>
-            <small><em>Note there is a set time to answer each question! <br>
-           Try to answer the question within the given time to ensure success in the end!</em> </small></p>
-           <button id="start">Start Quiz</button>
-        </div>
-        </div>
+        <h1>Coding Quiz Challenge</h1>
+        <p>
+          Try to answer the following code-related questions within the time
+          limit. Keep in mind that incorrect answers will penalize your
+          score/time by ten seconds!
+        </p>
+        <button id="start">Start Quiz</button>
+      </div>
 
-   </div>
+      <div id="questions" class="hide">
+        <h2 id="question-title"></h2>
+        <div id="choices" class="choices"></div>
+      </div>
 
-<div id="questions" class="hide">
-  <h2 id="question-title"></h2>
-  <div id="choices" class="choices"></div>
-</div>
+      <div id="end-screen" class="hide">
+        <h2>All done!</h2>
+        <p>Your final score is <span id="final-score"></span>.</p>
+        <p>
+          Enter initials: <input type="text" id="initials" max="3" />
+          <button id="submit">Submit</button>
+        </p>
+      </div>
 
-<div id="end-screen" class="hide">
-  <h2>All done!</h2>
-  <p>Your final score is <span id="final-score"></span>.</p>
-  <p>
-    Enter initials: <input type="text" id="initials" max="3" />
-    <button id="submit">Submit</button>
-  </p>
-</div>
+      <div id="feedback" class="feedback hide"></div>
+    </div>
 
-<div id="feedback" class="feedback hide"></div>
-</div>
-    <script src="./assets/js/script.js"></script>
-   </body>
+    <script src="./assets/js/questions.js"></script>
+    <script src="./assets/js/logic.js"></script>
+  </body>
 </html>
